side menu configured, netwrk service added

--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -1,13 +1,9 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
+  <nl-navbar [title]="DASHBOARD"></nl-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding class="csGrayBackground">
   <p>
-  DASHBOARD......
+    DASHBOARD......
   </p>
 </ion-content>
