lazy loading added on account module, navabar and modal-navbar convertedt to modules

--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -1,5 +1,22 @@
 <ion-header>
-  <nl-navbar [title]="DASHBOARD"></nl-navbar>
+  
+    <nl-navbar [title]="title"></nl-navbar>
+    <!--
+    <ion-navbar color="primary">
+        <ion-toolbar>
+            <button ion-button menuToggle>
+                <ion-icon name="menu"></ion-icon>
+            </button>
+     <ion-title >
+      <span>{{title | uppercase}}</span>
+    </ion-title>
+      <ion-buttons end>
+        <ng-content></ng-content>
+        </ion-buttons>
+        </ion-toolbar>
+    </ion-navbar>
+  -->
+      
 </ion-header>
 
 <ion-content padding class="csGrayBackground">
