--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <nl-navbar [title]="ACCOUNTS"></nl-navbar>
+    <nl-navbar [title]="title"></nl-navbar>
 </ion-header>
 
 <ion-content class="csGrayBackground">
