new complaintpage ;azy loaded

--- a/src/pages/complaint/new/new.html
+++ b/src/pages/complaint/new/new.html
@@ -1,7 +1,7 @@
 <ion-header>
-    <nl-modal-navabr [title]="title" (modalClosed)="dismiss()"> </nl-modal-navabr>
+    <nl-modal-navbar [title]="title" (modalClosed)="dismiss()"></nl-modal-navbar>
 </ion-header>
 
 <ion-content class="csGrayBackground">
-<p>new comlaint</p>
+<p>new comlaint</p>  
 </ion-content>
