--- a/src/pages/complaint/complaint.html
+++ b/src/pages/complaint/complaint.html
@@ -3,11 +3,48 @@
 </ion-header>
 
 <ion-content class="csGrayBackground">
-    <ion-fab top right edge>
-        
-        <button ion-fab mini color="danger" (click)="openNewComplaintModal()"><ion-icon name="add"></ion-icon></button>
 
+    <ion-refresher (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content></ion-refresher-content>
+    </ion-refresher>
+
+    <ion-fab top right edge>
+        <button ion-fab mini color="danger" (click)="openNewComplaintModal()"><ion-icon name="add"></ion-icon></button>
     </ion-fab>
-    <p>complaints.........</p>
-    <button ion-button (click)="getComplaints()">edsd</button>
+
+    <ion-list>
+
+        <ion-item-sliding *ngFor="let complaint of complaintList; let i =index">
+
+            <ion-item (click)="openViewModal(complaint, i)" [style.border-left-color]="complaint.statusColor">
+                <h2><b>{{complaint.againstCategoryName || complaint.againstEmployeeName}}</b></h2>
+                <h3>{{complaint.title}}</h3>
+
+                <ion-row>
+                    <ion-col width-50 class="no-padding-l csGray5353">
+                        <ion-icon name="clock"></ion-icon><span>{{complaint.createdAt | date:'medium'}}</span>
+                    </ion-col>
+                    <ion-col width-50 class="no-padding-l" [style.color]="complaint.statusColor">
+                        <ion-icon name="at"></ion-icon><span>{{complaint.statusName}}</span>
+                    </ion-col>
+                </ion-row>
+            </ion-item >
+
+
+            <ion-item-options side="right">
+                <!-- TODO: cusotm components of optios to be added-->
+            </ion-item-options>
+        </ion-item-sliding>
+
+        <div *ngIf="isEmptyList">
+            <ion-icon name="happy"></ion-icon>
+            <br>NO RECORD FOUND
+        </div>
+
+    </ion-list>
+
+    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+        <ion-infinite-scroll-content></ion-infinite-scroll-content>
+    </ion-infinite-scroll>
+
 </ion-content>
