--- a/src/pages/complaint/complaint.html
+++ b/src/pages/complaint/complaint.html
@@ -16,13 +16,13 @@
 
         <ion-item-sliding *ngFor="let complaint of complaintList; let i =index">
 
-            <ion-item (click)="openViewModal(complaint, i)" [style.border-left-color]="complaint.statusColor">
+            <ion-item (click)="openViewModal(complaint, i)" >
                 <h2><b>{{complaint.againstCategoryName || complaint.againstEmployeeName}}</b></h2>
                 <h3>{{complaint.title}}</h3>
 
                 <ion-row>
                     <ion-col width-50 class="no-padding-l csGray5353">
-                        <ion-icon name="clock"></ion-icon><span>{{complaint.createdAt | date:'medium'}}</span>
+                        <ion-icon name="clock"></ion-icon><span>{{complaint.createdAt | date:'mediumDate'}}</span>
                     </ion-col>
                     <ion-col width-50 class="no-padding-l" [style.color]="complaint.statusColor">
                         <ion-icon name="at"></ion-icon><span>{{complaint.statusName}}</span>
