--- a/src/pages/complaint/new/new.html
+++ b/src/pages/complaint/new/new.html
@@ -11,7 +11,7 @@
                 <ion-item>
                     <ion-icon ios="ios-sad-outline" md="md-sad" item-start color="primary"></ion-icon>
                     <ion-label>Against</ion-label>
-                    <ion-select [(ngModel)]="selectedCategory" (ngModelChange)="checkSelectedCategory()" required name="category">
+                    <ion-select [(ngModel)]="selectedCategory"  required name="category">
                         <ion-option *ngFor="let category of categories" [value]="category">{{category.name}}</ion-option>
                     </ion-select>
                 </ion-item>
