complaint closed added, angular2 moment module added and used

--- a/src/pages/complaint/complaint.html
+++ b/src/pages/complaint/complaint.html
@@ -17,12 +17,14 @@
         <ion-item-sliding *ngFor="let complaint of complaintList; let i =index">
 
             <button  ion-item (click)="openViewModal(complaint, i)" >
-                <h2><b>{{complaint.againstCategoryName || complaint.againstEmployeeName}}</b></h2>
+                <h2 *ngIf="complaint.againstCategoryId != 2"><b>{{complaint.againstCategoryName}}</b></h2>
+                <h2 *ngIf="complaint.againstCategoryId == 2"><b>{{complaint.againstEmployeeName}}</b></h2>
+                
                 <h3>{{complaint.title}}</h3>
 
                 <ion-row>
                     <ion-col width-50 class="no-padding-l csGray5353">
-                        <ion-icon name="clock"></ion-icon><span>{{complaint.createdAt | date:'mediumDate'}}</span>
+                        <ion-icon name="clock"></ion-icon><span>{{complaint.createdAt | amTimeAgo}}</span>
                     </ion-col>
                     <ion-col width-50 class="no-padding-l" [style.color]="complaint.statusColor">
                         <ion-icon name="at"></ion-icon><span>{{complaint.statusName}}</span>
