satisfy, reopen, closed functionality added, comments remaining

--- a/src/custom-components/compl-suggestion-options/compl-suggestion-options.html
+++ b/src/custom-components/compl-suggestion-options/compl-suggestion-options.html
@@ -1,20 +1,20 @@
-<button ion-button color="cool" (click)="openCommentModal()">
+<button ion-button color="cool" (click)="openCommentPage()">
       <ion-icon name="ios-chatbubbles" class="csBigIcon"></ion-icon>
       Comments
     </button>
 
 
-<button ion-button *ngIf="complaint.statusId == 4" color="danger" (click)="openReopenModal(complaint)">
+<button ion-button *ngIf="complaint.statusId == 4" color="danger" (click)="reOpenComplaint()">
     <ion-icon name="ios-thumbs-down" class="csBigIcon"></ion-icon>
     Reopen
   </button>
 
-<button ion-button *ngIf="complaint.statusId != 6 && complaint.statusId != 4" color="secondary" (click)="openCloseModal(complaint)">
+<button ion-button *ngIf="complaint.statusId != 6 && complaint.statusId != 4" color="secondary" (click)="closeComplaint()">
       <ion-icon name="md-close" class="csBigIcon"></ion-icon>
       Close
     </button>
 
-<button ion-button *ngIf="complaint.statusId === 4" color="primary" (click)="openSatisfiedModal(complaint)">
+<button ion-button *ngIf="complaint.statusId === 4" color="primary" (click)="satisfyComplaint()">
       <ion-icon name="ios-thumbs-up" class="csBigIcon"></ion-icon>
       Satisfied
     </button>
