--- a/src/pages/complaint/complaint.html
+++ b/src/pages/complaint/complaint.html
@@ -33,7 +33,7 @@
             </button>
 
             <ion-item-options side="right">
-                <c-s-options [complaint]="complaint"></c-s-options>
+                <c-s-options [complaint]="complaint" [complaintIndex]="i"></c-s-options>
             </ion-item-options>
 
         </ion-item-sliding>
