comments html separeatd, search page made generic, sockJs connections url managed

--- a/src/custom-components/edit-complaint/edit-complaint.html
+++ b/src/custom-components/edit-complaint/edit-complaint.html
@@ -7,7 +7,7 @@
     <ion-card>
         <button ion-item (click)="onAssignedToBtn()">
             <ion-label stacked>Assign To</ion-label>
-            <ion-input [(ngModel)]="assignTo" placeholder="Select Faculty "></ion-input>
+            <ion-input [(ngModel)]="assignToName" placeholder="Select Faculty "></ion-input>
         </button>
     </ion-card>
 
