new complaint format changed, other changes related to event subscribe(some bugs are there, which will be solved in next commit)

--- a/src/custom-components/account/account.html
+++ b/src/custom-components/account/account.html
@@ -4,4 +4,5 @@
 
 <ion-content class="csGrayBackground">
     <p>ACCOUNT....</p>
+    <button ion-button padding (click)="onLogOut()">LOG OUT</button>
 </ion-content>
