--- a/src/pages/management-app/complaint/edit-complaint/edit-complaint.html
+++ b/src/pages/management-app/complaint/edit-complaint/edit-complaint.html
@@ -7,7 +7,7 @@
     <ion-card>
         <button ion-item (click)="onAssignedToBtn()">
             <ion-label stacked>Assign To</ion-label>
-            <ion-input [(ngModel)]="assignToName" placeholder="Select Faculty "></ion-input>
+            <ion-input [(ngModel)]="assignToName" disabled placeholder="Select Faculty "></ion-input>
         </button>
     </ion-card>
 
