--- a/src/pages/management-app/suggestion/for-me/for-me.html
+++ b/src/pages/management-app/suggestion/for-me/for-me.html
@@ -2,8 +2,8 @@
     <nl-navbar [title]="title">
     </nl-navbar>
     <ion-searchbar [(ngModel)]="searchInput" (ionInput)="onSearchInput($event)" [debounce]="debounceDuration" (ionClear)="onSearchClear($event)"></ion-searchbar>
-    <sort-filter (onSelect)="onSortFilterSelect($event)"></sort-filter>
-
+    <sort-filter [sortSelected]="complaintMainPage.isSortApplied" [filterSelected]="complaintMainPage.isFilterApplied" (onSelect)="onSortFilterSelect($event)"></sort-filter>
+    
 </ion-header>
 
 <ion-content class="csGrayBackground">
