--- a/src/pages/student-app/complaint/complaint.html
+++ b/src/pages/student-app/complaint/complaint.html
@@ -3,9 +3,9 @@
     </nl-navbar>
     <ion-searchbar [(ngModel)]="searchInput" (ionInput)="onSearchInput($event)" [debounce]="debounceDuration" (ionClear)="onSearchClear($event)"></ion-searchbar>
 
-    <sort-filter (onSelect)="onSortFilterSelect($event)"></sort-filter>
+    <sort-filter [sortSelected]="complaintMainPage.isSortApplied" [filterSelected]="complaintMainPage.isFilterApplied" (onSelect)="onSortFilterSelect($event)"></sort-filter>
 
-</ion-header>
+</ion-header>  
 
 <ion-content class="csGrayBackground">
     <ion-refresher (ionRefresh)="doRefresh($event)">
