--- a/src/pages/management-app/poll/newPoll/newPoll.html
+++ b/src/pages/management-app/poll/newPoll/newPoll.html
@@ -8,37 +8,135 @@
 
         <ion-card>
             <ion-item>
+                <ion-label stacked>
+                    <b>Question</b>
+                </ion-label>
+                <ion-textarea [(ngModel)]="question" placeholder="Enter question" maxlength=50 required name="question">
+                </ion-textarea>
+                <ion-badge item-end>{{50 - question?.length}}</ion-badge>
+            </ion-item>
+        </ion-card>
+
+        <ion-card>
+            <ion-item>
+                <ion-label>
+                    <b>Select Option Type</b>
+                </ion-label>
+                <ion-select [(ngModel)]="optionTypeId" required name="optionType">
+                    <ion-option *ngFor="let optionType of optionTypesPossible" [value]="optionType.id">
+                        {{optionType.name}}
+                    </ion-option>
+                </ion-select>
+            </ion-item>
+        </ion-card>
+
+        <ion-card>
+            <ion-list>
+                <ion-item *ngFor="let option of options;let i = index">
+
+                    <ion-label stacked>
+                        <b>Option {{i+1}}</b>
+                    </ion-label>
+                    <ion-textarea [(ngModel)]="option.choice" placeholder="Enter option" maxlength=50 required name="option{{i}}">
+                    </ion-textarea>
+                    <button *ngIf="i>1" ion-button icon-only item-end (click)="removeOption(i)">
+                        <ion-icon name="close"></ion-icon>
+                    </button>
+                </ion-item>
+
+            </ion-list>
+            <button type="button" *ngIf="options.length<=optionLimit - 1" ion-button clear icon-left (click)="onAddOptionBtn()">
+                <ion-icon name="add"></ion-icon> Add Option
+            </button>
+        </ion-card>
+
+        <ion-card>
+            <ion-item>
+                <ion-label>Due Date</ion-label>
+                <ion-datetime max="2018" [min]="todayDate()"  displayFormat="MMM DD YYYY" pickerFormat="DD MMM YYYY" name="expireDate" [(ngModel)]="expireDate" ></ion-datetime>
+            </ion-item>
+        </ion-card>
+
+
+        <ion-card *ngIf="audienceList">
+            <ion-item>
                 <ion-label>Poll For</ion-label>
-                <ion-select [(ngModel)]="mainAudienceId"  required name="mainAudience">
+                <ion-select [(ngModel)]="mainAudience" (ionChange)="onAudienceChange()" required name="mainAudience">
                     <ion-option *ngFor="let audience of audienceList" [value]="audience">{{audience.name}}</ion-option>
                 </ion-select>
             </ion-item>
         </ion-card>
+
+        <div *ngIf="departmentList && mainAudience.id == 2">
+            <ion-card>
+                <ion-item>
+                    <ion-label>Select Departments</ion-label>
+                    <ion-select [(ngModel)]="departmentIds" multiple required name="departments">
+                        <ion-option *ngFor="let dep of departmentList" [value]="dep.id">{{dep.name}}</ion-option>
+                    </ion-select>
+                </ion-item>
+            </ion-card>
+        </div>
+
+        <div *ngIf="mainAudience?.subAudience && (mainAudience.id == 1 || mainAudience.id == 2)">
+            <ion-card>
+                <ion-item>
+                    <ion-label>Select Subcategories</ion-label>
+                    <ion-select [(ngModel)]="audienceIds" multiple required name="subCategory">
+                        <ion-option *ngFor="let subCat of mainAudience.subAudience" [value]="subCat.id">{{subCat.name }}</ion-option>
+                    </ion-select>
+                </ion-item>
+            </ion-card>
+        </div>
+
+        <div *ngIf=" programList && mainAudience?.id == 3 ">
+            <ion-card>
+                <ion-item>
+                    <ion-label>Select Programs</ion-label>
+                    <ion-select [(ngModel)]="programIds" multiple required name="programs">
+                        <ion-option *ngFor="let pgm of programList" [value]="pgm.id">{{pgm.name}}</ion-option>
+                    </ion-select>
+                </ion-item>
+            </ion-card>
+        </div>
+
+        <div *ngIf=" mainAudience?.id == 3 ">
+            <ion-card>
+                <ion-item>
+                    <ion-label>Select Years</ion-label>
+                    <ion-select [(ngModel)]="yearIds" multiple required name="years">
+                        <ion-option *ngFor="let y of yearList" [value]="y.id">{{y.name}}</ion-option>
+                    </ion-select>
+                </ion-item>
+            </ion-card>
+        </div>
+
+        <div *ngIf=" mainAudience?.id == 4 && yearsListForModule">
+            <ion-card>
+                <ion-item>
+                    <ion-label>Select Year</ion-label>
+                    <ion-select [(ngModel)]="yearForModule" (ionChange)="onYearForModuleChange()" required name="years">
+                        <ion-option *ngFor="let y of yearsListForModule" [value]="y">{{y.name || y.yearName}}</ion-option>
+                    </ion-select>
+                </ion-item>
+            </ion-card>
+        </div>
+
+        <div *ngIf=" mainAudience?.id == 4 && moduleList">
+            <ion-card>
+                <ion-item>
+                    <ion-label>Select Modules</ion-label>
+                    <ion-select [(ngModel)]="moduleIds" multiple required name="years">
+                        <ion-option *ngFor="let module of moduleList" [value]="module.moduleId">{{module.moduleName}}</ion-option>
+                    </ion-select>
+                </ion-item>
+            </ion-card>
+        </div>
+
+        <div padding>
+            <button [disabled]="!newPollForm.valid" ion-button full type="submit">Submit</button>
+        </div>
         <!--
-        <div *ngIf="selectedCategory?.subCategory && selectedCategory.subCategory.length > 0">
-            <ion-card>
-                <ion-item>
-                    <ion-icon name="options" item-start></ion-icon>
-                    <ion-label>SubCategory</ion-label>
-                    <ion-select [(ngModel)]="selectedSubCategory" (ionChange)="resetSubCategories2()" required name="subCategory">
-                        <ion-option *ngFor="let subCat of selectedCategory.subCategory" [value]="subCat">{{subCat.name || subCat.facultyName}}</ion-option>
-                    </ion-select>
-                </ion-item>
-            </ion-card>
-        </div>
-
-        <div *ngIf="selectedSubCategory?.subCategory && selectedSubCategory.subCategory.length > 0">
-            <ion-card>
-                <ion-item>
-                    <ion-icon name="options" item-start></ion-icon>
-                    <ion-label>SubCategory</ion-label>
-                    <ion-select [(ngModel)]="selectedSubCategory2" required name="subCategory2">
-                        <ion-option *ngFor="let subCat of selectedSubCategory.subCategory" [value]="subCat">{{subCat.name || subCat.facultyName}}</ion-option>
-                    </ion-select>
-                </ion-item>
-            </ion-card>
-        </div>
-
         <ion-card>
             <ion-item>
                 <ion-label stacked>Title</ion-label>
